@@ -1,3 +1,8 @@
+2017-02-17  Joseph Myers  <joseph@codesourcery.com>
+
+	* c-cppbuiltin.c (builtin_define_float_constants): Define
+	__DECIMAL_DIG__ to the value for long double.
+
 2017-02-15  Marek Polacek  <polacek@redhat.com>
 
 	PR c/79515
